modal scrollbar issue fixed

--- a/css/master.css
+++ b/css/master.css
@@ -940,6 +940,9 @@ p {
   font-family: "sharp_sansmedium";
   background: transparent; }
 
+body:is(.modal-open) {
+  padding-right: 0px !important; }
+
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .modal-dialog {
     max-width: 90%; } }
